Bug 1187792 - Don't set the SPCSPS unless meta-viewport or zooming is enabled. r=botond